# gamitude-vc

./: .gitignore  Dockerfile  Gamitude.postman_collection.json  README.md  api.py  clone.sh  docker-compose.yaml  engine.py  pyproject.toml  requirements.txt  run_lin.sh  run_win.sh  test_speech.py
modelsTesting/: Testing_zero_shot.ipynb  hub_cos.ipynb  transformers_cos.ipynb
