[tool.poetry]
name = "gamitude-vc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
PyAudio = "0.2.11"
websockets = "8.1"
pocketsphinx = "0.1.15"
SpeechRecognition = "3.8.1"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
