[tool.poetry]
name = "gamitude-vc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
transformers = "3.1.0"
tensorflow = "2.4.1"
flask = "1.1.2"
flask_cors = "3.0.10"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
